--- a/package.json
+++ b/package.json
@@ -13,17 +13,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apexcharts": "^3.49.0",
     "next": "^14.2.3",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
     "eslint": "^8",
-    "eslint-config-next": "^14"
+    "eslint-config-next": "^14",
+    "postcss": "^8",
+    "typescript": "^5"
   }
 }
